modify dir structure

--- a/LearningDataStructure/LearningDataStructure.vcxproj
+++ b/LearningDataStructure/LearningDataStructure.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Vector.h" />
+    <ClInclude Include="DataStructure\Vector.h" />
+    <ClInclude Include="DataStructure\Vector.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
