--- a/LearningDataStructure/LearningDataStructure.vcxproj
+++ b/LearningDataStructure/LearningDataStructure.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataStructure\List.h" />
+    <ClInclude Include="DataStructure\List.tpp" />
     <ClInclude Include="DataStructure\Vector.h" />
     <ClInclude Include="DataStructure\Vector.hpp" />
   </ItemGroup>
